--- a/index.html
+++ b/index.html
@@ -468,11 +468,15 @@
         </div>
         
         <div class="card-face card-back">
-          <div class="card-label">SAMPLE REVIEW WITH KEY EXPRESSIONS</div>
-          <div style="text-align: center; margin-bottom: 1rem;">
-            <span class="topic-badge" id="topicBadgeBack"></span>
-            <span class="type-badge" id="typeBadgeBack"></span>
-          </div>
+  <div class="card-label" id="backLabel">SAMPLE ANSWER</div>
+  <div class="topic-badge" id="topicBadgeBack"></div>
+  
+  <div class="scrollable-content">
+    <div class="essay-answer" id="essayAnswer"></div>
+  </div>
+  
+  <div class="card-hint">💡 Click to see question again</div>
+</div>
 
           <div class="review-title" id="reviewTitle"></div>
           <div class="word-count" id="wordCount"></div>
