--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
       background: transparent;
       border: none;
       border-radius: 1.5rem;
-      padding: 0;
-      padding-right: 8px; /* FIXED: Space for scrollbar */
+      padding: 0 1rem 0 0.5rem; /* TEST: Added horizontal padding, more space on right for scrollbar */
       display: flex;
       flex-direction: column;
       box-shadow: none;
@@ -286,7 +285,8 @@
       word-wrap: break-word;
       overflow-wrap: break-word;
       word-break: break-word;
-      max-width: 100%;
+      max-width: 85%; /* TEST: Reduced width by 15% */
+      margin: 0 auto; /* Center the narrower text */
     }
     
     .review-answer p {
@@ -303,6 +303,9 @@
       color: #C9A961;
       margin-bottom: 1rem;
       text-align: center;
+      max-width: 85%; /* TEST: Match review-answer width */
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .word-count {
@@ -310,6 +313,9 @@
       color: #636366;
       text-align: center;
       margin-bottom: 1rem;
+      max-width: 85%; /* TEST: Match review-answer width */
+      margin-left: auto;
+      margin-right: auto;
     }
 
     /* Minimalist gentle blue highlighting */
