--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
 
     .skeleton-section:last-of-type {
       border-bottom: none;
-      padding-bottom: 2rem; /* FIXED: Extra padding at bottom */
+      padding-bottom: 6rem; /* FIXED: Extra padding at bottom for space before hint */
     }
 
     #skeletonContent {
-      min-height: calc(100vh - 300px); /* FIXED: Ensure skeleton content is tall enough to scroll */
+      flex-grow: 1; /* Allow it to grow and push hint to bottom */
     }
 
     .skeleton-title {
@@ -298,14 +298,13 @@
       line-height: 1.8;
       color: #d1d1d6;
       text-align: justify;
-      min-height: calc(100vh - 200px); /* FIXED: Ensure content is tall enough to scroll */
-      padding-bottom: 2rem; /* FIXED: Extra padding at bottom */
+      padding-bottom: 6rem; /* FIXED: Large bottom padding to ensure scrollability and space for hint */
       /* CRITICAL FIX: Prevent horizontal overflow that breaks vertical scroll */
       word-wrap: break-word;
       overflow-wrap: break-word;
       word-break: break-word;
-      max-width: 85%; /* TEST: Reduced width by 15% */
-      margin: 0 auto; /* Center the narrower text */
+      max-width: 100%; /* Restored to full width like front side */
+      flex-grow: 1; /* Allow it to grow */
     }
     
     .review-answer p {
@@ -322,9 +321,6 @@
       color: #C9A961;
       margin-bottom: 1rem;
       text-align: center;
-      max-width: 85%; /* TEST: Match review-answer width */
-      margin-left: auto;
-      margin-right: auto;
     }
 
     .word-count {
@@ -332,9 +328,6 @@
       color: #636366;
       text-align: center;
       margin-bottom: 1rem;
-      max-width: 85%; /* TEST: Match review-answer width */
-      margin-left: auto;
-      margin-right: auto;
     }
 
     /* Minimalist gentle blue highlighting */
@@ -373,6 +366,11 @@
       text-align: center;
       /* FIXED: Make hint non-interactive to prevent click conflicts */
       pointer-events: none;
+      flex-shrink: 0; /* Prevent shrinking */
+      position: sticky;
+      bottom: 0;
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
     }
     
     .controls {
